<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="workorder.android.maximo.tivoli.ibm.com.maximoworkorder.WorkOrderFormActivity">

    <ScrollView
        android:id="@+id/workorder_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/workorder_edit_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wonum"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_wonum"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_description"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_schedule_start_date"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_save_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:clickable="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_schedule_start_time"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_save_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:clickable="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_finish_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_schedule_finish_date"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_save_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:clickable="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_finish_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_schedule_finish_time"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_save_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="datetime"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:clickable="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/duration"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_duration"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_save_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="time"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/save_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_save"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
